Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-111973

qdoc: Something is wrong with qdoc's handling of marked code

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P3: Somewhat important
    • 6.5.1, 6.6.0
    • 6.5
    • Build tools: qdoc
    • None
    • f47a4b17f (dev), 758ca4c4d (6.5)
    • DaVinci 76

    Description

      https://codereview.qt-project.org/c/qt/qtbase/+/463354/10

      Uses \snippet commands to quote lines from a source file. The usage of the commands is correct, but QDoc complains

       qt5/qtbase/examples/qtconcurrent/wordcount/main.cpp: (qdoc) warning: Something is wrong with qdoc's handling of marked code

      Presumably because of a discrepancy between the quoted plain code and marked-up code. The .html output looks correct, however.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            treinio Topi Reiniƶ
            treinio Topi Reiniƶ
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes